# crewai_cvs_to_graphdb

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  report.md
src/crewai_cvs_to_graphdb/: crew.py  main.py  report.md
src/crewai_cvs_to_graphdb/config/: agents.yaml  tasks.yaml
src/crewai_cvs_to_graphdb/tools/: custom_tool.py
