[tool.poetry]
name = "crewai_cvs_to_graphdb"
version = "0.1.0"
description = "crewai-cvs-to-graphdb using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }
unstructured = "^0.15.13"
python-docx = "^1.1.2"
neo4j = "^5.25.0"


[tool.poetry.scripts]
crewai_cvs_to_graphdb = "crewai_cvs_to_graphdb.main:run"
run_crew = "crewai_cvs_to_graphdb.main:run"
train = "crewai_cvs_to_graphdb.main:train"
replay = "crewai_cvs_to_graphdb.main:replay"
test = "crewai_cvs_to_graphdb.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
